--- a/Admixture_Time_Inference_Paper_Draft.Rmd
+++ b/Admixture_Time_Inference_Paper_Draft.Rmd
@@ -1243,345 +1243,11 @@ x.axes.lables=c("HES\n0.02\nInf\nCon","HES\n0.02\nInf\nCon","HES\n0.05\nInf\nCon
 
 Plot_Fig_2_A(Plot_model,x.axes.lables)
 ```
-##Estimating the Lomax-parameters under different conditions
-
-```{r message=FALSE, echo=FALSE,warning=FALSE}
-#### New Figure for Paper using recent sampling (50 gen): constant RR, RM no correction, RM diff RM correction, RM correction same RM ####
-
-library(ggplot2)
-library(reshape2)
-library(viridis)
-library(ggpubr)
-cbPalette_viridis <- viridis(6,option = "D")
-
-Filter_Result_Table <- function(Result.Table){
-  Result.Table=read.table(Result.Table,header=F,sep = " ")
-  Result.names <- c('A.exp', 's.exp', 'c.exp', 'RSS_Expo','AIC_Expo', 'A.lomax', 's.lomax', 'w.lomax','c.lomax', 'RSS_Lomax','AIC_Lomax', 'F_Test','Scenario.name','GF.Start','GF.End','AS','minDist','GF.Model')
-  colnames(Result.Table) <- Result.names
-  #Result.Table <- Result.Table[(1/Result.Table$s.exp)>0,]
-  #Result.Table <- Result.Table[(1/Result.Table$s.exp)<5000,]
-  #Result.Table <- Result.Table[Result.Table$RSS_Lomax<1e-2,]
-  return(Result.Table)
-}
-
-#### True values
-True_params <- function(Result.Table){
-  True_params_Calc <- function(True_GF_length,True_mean_GF){
-    EX= True_mean_GF
-    GF_Len <-True_GF_length
-    VarX= ((GF_Len)/4)**2
-    b= EX/VarX
-    a=EX*b
-    #a=a+1
-    True_W=1/a
-    True_S=b/(1/True_W)
-    xx=c(True_W,True_S)
-    return(xx)
-  }
-  True.params <- c()
-  for (i in 1:length(Result.Table$F_Test)) {
-    xx=True_params_Calc(Result.Table$True_GF_length[i],Result.Table$True_mean_GF[i])
-    True.params <- rbind(True.params,xx)
-  }
-  True.params <- as.data.frame(True.params)
-  return(True.params)
-}
-
-Result.Table.fn <- function(Result.Table.path,Sampling.time.from.GF.End,name){
-  Result.Table <- Filter_Result_Table(Result.Table.path)
-  Result.Table$Name <- name
-  Result.Table$Sample_Time <- Sampling.time.from.GF.End
-  Result.Table$True_GF_length <- Result.Table$GF.End-Result.Table$GF.Start
-  Result.Table$True_mean_GF <- ((Result.Table$GF.End+Result.Table$GF.Start)/2)-(Result.Table$GF.Start-Result.Table$Sample_Time)
-  Result.Table$mean_GF_exp <- 1/Result.Table$s.exp
-  Result.Table$mean_GF_lomax_s <- 1/Result.Table$s.lomax
-  Result.Table.comparison <- True_params(Result.Table)
-  Result.Table$True_W <- Result.Table.comparison$V1
-  Result.Table$True_S <- Result.Table.comparison$V2
-  Result.Table.comparison$length_GF <- (sqrt(Result.Table$mean_GF_lomax_s/(((1/Result.Table$w.lomax)+1)*Result.Table$s.lomax)))*4
-  Result.Table$length_GF <- Result.Table.comparison$length_GF
-  
-  return(Result.Table)
-}
-
-Plot_sampling_50_gen_t_GF <- function(ggdata_t.GF,cbPalette_viridis){
-  ggplot(ggdata_t.GF,aes(x=variable,y=as.numeric(as.character(value)),colour=factor(Name)))+
-    geom_boxplot(show.legend = T)+
-    facet_grid(~as.factor(True_GF_length),switch = "x")+
-    geom_hline( aes(yintercept = True_mean_GF ))+
-    ggtitle("All sampled 50 gen from GF end") +
-    labs(x = "Gene Flow Length")+
-    labs(y = "Estimated Admixture Time")+
-    theme(
-      axis.text.x=element_blank(),
-      axis.ticks.x=element_blank())+
-    coord_cartesian(ylim = c(0,1000), expand = 0)+
-    scale_color_manual("Simulations",
-                       values = c(cbPalette_viridis[1],cbPalette_viridis[2],cbPalette_viridis[3],cbPalette_viridis[4]),
-                       labels = c("Constant Recombination","HapMap AAMap corrected","HapMap HapMap corrected","HapMap not corrected"))
-  
-}
-
-Plot_sampling_50_gen_GF_Length <- function(ggdata_l.GF,cbPalette_viridis){
-  ggplot(ggdata_l.GF,aes(x=variable,y=as.numeric(as.character(value)),colour=factor(Name)))+
-    geom_boxplot(show.legend = F)+
-    facet_grid(~as.factor(True_GF_length),switch = "x")+
-    geom_hline( aes(yintercept = True_GF_length ))+
-    ggtitle(paste("All sampled 50 gen from GF end",sep = " ")) +
-    labs(x = "Gene Flow Length")+
-    labs(y = "Estimated Gene Flow Length")+
-    theme(
-      axis.text.x=element_blank(),
-      axis.ticks.x=element_blank())+
-    coord_cartesian(ylim = c(0,4000), expand = 0)+
-    scale_color_manual("Simulations",
-                       values = c(cbPalette_viridis[1],cbPalette_viridis[2],cbPalette_viridis[3],cbPalette_viridis[4]),
-                       labels = c("Constant Recombination","HapMap AAMap corrected","HapMap HapMap corrected","HapMap not corrected"))
-}
-
-Plot_sampling_varying_gen_t_GF <- function(ggdata_t.GF_varying,cbPalette_viridis){
-  ggplot(ggdata_t.GF_varying,aes(x=variable,y=as.numeric(as.character(value)),colour=factor(Name)))+
-    geom_boxplot()+
-    facet_grid(~as.factor(Sample_Time),switch = "x")+
-    geom_hline( aes(yintercept = True_mean_GF ))+
-    ggtitle("All Gene Flow length = 800 gen") +
-    labs(x = "Generations Sample After Gene Flow End")+
-    labs(y = "Estimated Admixture Time")+
-    theme(
-      axis.text.x=element_blank(),
-      axis.ticks.x=element_blank())+
-    coord_cartesian(ylim = c(0,2000), expand = 0)+
-    scale_color_manual("Simulations",
-                       values = c(cbPalette_viridis[1],cbPalette_viridis[2],cbPalette_viridis[3],cbPalette_viridis[4]),
-                       labels = c("Constant Recombination","HapMap AAMap corrected","HapMap HapMap corrected","HapMap not corrected"))
-  
-}
-
-Plot_sampling_varying_gen_GF_Length <- function(ggdata_l.GF_varying,cbPalette_viridis){
-  ggplot(ggdata_l.GF_varying,aes(x=variable,y=as.numeric(as.character(value)),colour=factor(Name)))+
-    #geom_point(aes(size = Freq),show.legend = F)+
-    geom_boxplot(show.legend = F)+
-    facet_grid(~as.factor(Sample_Time),switch = "x")+
-    geom_hline( aes(yintercept = True_GF_length ))+
-    ggtitle("All Gene Flow length = 800 gen") +
-    labs(x = "Generations Sample After Gene Flow End")+
-    labs(y = "Estimated Gene Flow  Length")+
-    theme(
-      axis.text.x=element_blank(),
-      axis.ticks.x=element_blank())+
-    coord_cartesian(ylim = c(0,4000), expand = 0)+
-    scale_color_manual("Simulations",
-                       values = c(cbPalette_viridis[1],cbPalette_viridis[2],cbPalette_viridis[3],cbPalette_viridis[4]),
-                       labels = c("Constant Recombination","HapMap AAMap corrected","HapMap HapMap corrected","HapMap not corrected"))
-}
-
-Result.Table.path_Recent_50 <-'Result_Files_new_Plot/Result_file_SIM_Raw_ALDER-Fit-Close_to_GF_End_Recent_GF-GF_Model_IV-min_dist_Fit-0.05-ascertainment-0-No_correction.txt'
-Result.Table.path_Recent_50_Recomb_Map_no_correction <-'Result_Files_new_Plot/Result_file_SIM_Raw_ALDER-Fit-Close_to_GF_End_Recent_GF_Recomn_Map_Hap_Map-GF_Model_IV-min_dist_Fit-0.05-ascertainment-0-No_correction.txt'
-Result.Table.path_Recent_50_Recomb_Map_AAMap_correction <-'Result_Files_new_Plot/Result_file_SIM_Raw_ALDER-Fit-Close_to_GF_End_Recent_GF_Recomn_Map_Hap_Map-GF_Model_IV-min_dist_Fit-0.05-ascertainment-0-AAMap_correction.txt'
-Result.Table.path_Recent_50_Recomb_Map_HapMap_Recomb_HapMap_correction <-'Result_Files_new_Plot/Result_file_SIM_Raw_ALDER-Fit-Close_to_GF_End_Recent_GF_Recomn_Map_Hap_Map-GF_Model_IV-min_dist_Fit-0.05-ascertainment-0-HapMap_correction.txt'
-
-Result.Table.path_Recent_50_fixed_Lambda <-'Result_Files_new_Plot/Fixed_Lambda/Result_file_SIM_Raw_ALDER-Fit-Close_to_GF_End_Recent_GF-GF_Model_IV-min_dist_Fit-0.05-ascertainment-0-No_correction.txt'
-Result.Table.path_Recent_50_Recomb_Map_no_correction_fixed_Lambda <-'Result_Files_new_Plot/Fixed_Lambda/Result_file_SIM_Raw_ALDER-Fit-Close_to_GF_End_Recent_GF_Recomn_Map_Hap_Map-GF_Model_IV-min_dist_Fit-0.05-ascertainment-0-No_correction.txt'
-Result.Table.path_Recent_50_Recomb_Map_AAMap_correction_fixed_Lambda <-'Result_Files_new_Plot/Fixed_Lambda/Result_file_SIM_Raw_ALDER-Fit-Close_to_GF_End_Recent_GF_Recomn_Map_Hap_Map-GF_Model_IV-min_dist_Fit-0.05-ascertainment-0-AAMap_correction.txt'
-Result.Table.path_Recent_50_Recomb_Map_HapMap_Recomb_HapMap_correction_fixed_Lambda <-'Result_Files_new_Plot/Fixed_Lambda/Result_file_SIM_Raw_ALDER-Fit-Close_to_GF_End_Recent_GF_Recomn_Map_Hap_Map-GF_Model_IV-min_dist_Fit-0.05-ascertainment-0-HapMap_correction.txt'
-
-Result.Table.path_Recent_Varying <-'Result_Files_new_Plot/Result_file_SIM_Raw_ALDER-Fit-Variyng_Time_of_Recent_sampling_GF_l_fixed-GF_Model_IV-min_dist_Fit-0.05-ascertainment-0-No_correction.txt'
-Result.Table.path_Recent_Varying_Recomb_Map_no_correction <-'Result_Files_new_Plot/Result_file_SIM_Raw_ALDER-Fit-Variyng_Time_of_Recent_sampling_GF_l_fixed_Recomn_Map_Hap_Map-GF_Model_IV-min_dist_Fit-0.05-ascertainment-0-No_correction.txt'
-Result.Table.path_Recent_Varying_Recomb_Map_AAMap_correction <-'Result_Files_new_Plot/Result_file_SIM_Raw_ALDER-Fit-Variyng_Time_of_Recent_sampling_GF_l_fixed_Recomn_Map_Hap_Map-GF_Model_IV-min_dist_Fit-0.05-ascertainment-0-AAMap_correction.txt'
-Result.Table.path_Recent_Varying_Recomb_Map_HapMap_Recomb_HapMap_correction <-'Result_Files_new_Plot/Result_file_SIM_Raw_ALDER-Fit-Variyng_Time_of_Recent_sampling_GF_l_fixed_Recomn_Map_Hap_Map-GF_Model_IV-min_dist_Fit-0.05-ascertainment-0-HapMap_correction.txt'
-
-Result.Table.path_Recent_Varying_fixed_Lambda <-'Result_Files_new_Plot/Fixed_Lambda/Result_file_SIM_Raw_ALDER-Fit-Variyng_Time_of_Recent_sampling_GF_l_fixed-GF_Model_IV-min_dist_Fit-0.05-ascertainment-0-No_correction.txt'
-Result.Table.path_Recent_Varying_Recomb_Map_no_correction_fixed_Lambda <-'Result_Files_new_Plot/Fixed_Lambda/Result_file_SIM_Raw_ALDER-Fit-Variyng_Time_of_Recent_sampling_GF_l_fixed_Recomn_Map_Hap_Map-GF_Model_IV-min_dist_Fit-0.05-ascertainment-0-No_correction.txt'
-Result.Table.path_Recent_Varying_Recomb_Map_AAMap_correction_fixed_Lambda <-'Result_Files_new_Plot/Fixed_Lambda/Result_file_SIM_Raw_ALDER-Fit-Variyng_Time_of_Recent_sampling_GF_l_fixed_Recomn_Map_Hap_Map-GF_Model_IV-min_dist_Fit-0.05-ascertainment-0-AAMap_correction.txt'
-Result.Table.path_Recent_Varying_Recomb_Map_HapMap_Recomb_HapMap_correction_fixed_Lambda <-'Result_Files_new_Plot/Fixed_Lambda/Result_file_SIM_Raw_ALDER-Fit-Variyng_Time_of_Recent_sampling_GF_l_fixed_Recomn_Map_Hap_Map-GF_Model_IV-min_dist_Fit-0.05-ascertainment-0-HapMap_correction.txt'
-
-
-Plot.data_50<-rbind(
-  Recent_50_constant<- Result.Table.fn(Result.Table.path_Recent_50,50,'Recent_50_constant'),
-  Recent_50_HapMap_no_correction <- Result.Table.fn(Result.Table.path_Recent_50_Recomb_Map_no_correction,50,'Recent_50_HapMap_no_correction'),
-  Recent_50_HapMap_AAMap_correction <- Result.Table.fn(Result.Table.path_Recent_50_Recomb_Map_AAMap_correction,50,'Recent_50_HapMap_AAMap_correction'),
-  Recent_50_HapMap_HapMap_correction <- Result.Table.fn(Result.Table.path_Recent_50_Recomb_Map_HapMap_Recomb_HapMap_correction,50,'Recent_50_HapMap_HapMap_correction')
-)
-
-ggdata_t.GF_50 <- melt(Plot.data_50,measure.vars =  c('mean_GF_exp'),id.vars = c('True_mean_GF','True_GF_length','Name'))
-ggdata_l.GF_50 <- melt(Plot.data_50,measure.vars =  c('length_GF'),id.vars = c('True_mean_GF','True_GF_length','Name'))
-
-Plot.data_50_fixed_Lambda<-rbind(
-  Recent_50_constant_fixed_Lambda<- Result.Table.fn(Result.Table.path_Recent_50_fixed_Lambda,50,'Recent_50_constant'),
-  Recent_50_HapMap_no_correction_fixed_Lambda <- Result.Table.fn(Result.Table.path_Recent_50_Recomb_Map_no_correction_fixed_Lambda,50,'Recent_50_HapMap_no_correction'),
-  Recent_50_HapMap_AAMap_correction_fixed_Lambda <- Result.Table.fn(Result.Table.path_Recent_50_Recomb_Map_AAMap_correction_fixed_Lambda,50,'Recent_50_HapMap_AAMap_correction'),
-  Recent_50_HapMap_HapMap_correction_fixed_Lambda <- Result.Table.fn(Result.Table.path_Recent_50_Recomb_Map_HapMap_Recomb_HapMap_correction_fixed_Lambda,50,'Recent_50_HapMap_HapMap_correction')
-)
-
-ggdata_t.GF_50_fixed_Lambda <- melt(Plot.data_50_fixed_Lambda,measure.vars =  c('mean_GF_lomax_s'),id.vars = c('True_mean_GF','True_GF_length','Name'))
-ggdata_l.GF_50_fixed_Lambda <- melt(Plot.data_50_fixed_Lambda,measure.vars =  c('length_GF'),id.vars = c('True_mean_GF','True_GF_length','Name'))
-
-Plot.data_varying<-rbind(
-  Recent_varying_constant<- Result.Table.fn(Result.Table.path_Recent_Varying,c(rep(50,100),rep(100,100),rep(200,100),rep(400,100),rep(800,100),rep(1000,100)),'Recent_50_constant'),
-  Recent_varying_HapMap_no_correction <- Result.Table.fn(Result.Table.path_Recent_Varying_Recomb_Map_no_correction,c(rep(50,100),rep(100,100),rep(200,100),rep(400,100),rep(800,100),rep(1000,100)),'Recent_50_HapMap_no_correction'),
-  Recent_varying_HapMap_AAMap_correction <- Result.Table.fn(Result.Table.path_Recent_Varying_Recomb_Map_AAMap_correction,c(rep(50,100),rep(100,100),rep(200,100),rep(400,100),rep(800,100),rep(1000,100)),'Recent_50_HapMap_AAMap_correction'),
-  Recent_varying_HapMap_HapMap_correction <- Result.Table.fn(Result.Table.path_Recent_Varying_Recomb_Map_HapMap_Recomb_HapMap_correction,c(rep(50,100),rep(100,100),rep(200,100),rep(400,100),rep(800,100),rep(1000,100)),'Recent_50_HapMap_HapMap_correction')
-)
-
-ggdata_t.GF_varying <- melt(Plot.data_varying,measure.vars =  c('mean_GF_exp'),id.vars = c('True_mean_GF','True_GF_length','Name','Sample_Time'))
-ggdata_l.GF_varying <- melt(Plot.data_varying,measure.vars =  c('length_GF'),id.vars = c('True_mean_GF','True_GF_length','Name','Sample_Time'))
-
-Plot.data_varying_fixed_Lambda<-rbind(
-  Recent_varying_constant_fixed_Lambda<- Result.Table.fn(Result.Table.path_Recent_Varying_fixed_Lambda,c(rep(50,100),rep(100,100),rep(200,100),rep(400,100),rep(800,100),rep(1000,100)),'Recent_50_constant'),
-  Recent_varying_HapMap_no_correction_fixed_Lambda <- Result.Table.fn(Result.Table.path_Recent_Varying_Recomb_Map_no_correction_fixed_Lambda,c(rep(50,100),rep(100,100),rep(200,100),rep(400,100),rep(800,100),rep(1000,100)),'Recent_50_HapMap_no_correction'),
-  Recent_varying_HapMap_AAMap_correction_fixed_Lambda <- Result.Table.fn(Result.Table.path_Recent_Varying_Recomb_Map_AAMap_correction_fixed_Lambda,c(rep(50,100),rep(100,100),rep(200,100),rep(400,100),rep(800,100),rep(1000,100)),'Recent_50_HapMap_AAMap_correction'),
-  Recent_varying_HapMap_HapMap_correction_fixed_Lambda <- Result.Table.fn(Result.Table.path_Recent_Varying_Recomb_Map_HapMap_Recomb_HapMap_correction_fixed_Lambda,c(rep(50,100),rep(100,100),rep(200,100),rep(400,100),rep(800,100),rep(1000,100)),'Recent_50_HapMap_HapMap_correction')
-)
-
-ggdata_t.GF_varying_fixed_Lambda <- melt(Plot.data_varying_fixed_Lambda,measure.vars =  c('mean_GF_lomax_s'),id.vars = c('True_mean_GF','True_GF_length','Name','Sample_Time'))
-ggdata_l.GF_varying_fixed_Lambda <- melt(Plot.data_varying_fixed_Lambda,measure.vars =  c('length_GF'),id.vars = c('True_mean_GF','True_GF_length','Name','Sample_Time'))
-
-
-New.P1 <- Plot_sampling_50_gen_t_GF(ggdata_t.GF_50,cbPalette_viridis)
-New.P2 <- Plot_sampling_50_gen_GF_Length(ggdata_l.GF_50,cbPalette_viridis)
-New.P3 <- Plot_sampling_varying_gen_t_GF(ggdata_t.GF_varying,cbPalette_viridis)
-New.P4 <- Plot_sampling_varying_gen_GF_Length(ggdata_l.GF_varying,cbPalette_viridis)
-
-New.P1_fixed_Lambda <- Plot_sampling_50_gen_t_GF(ggdata_t.GF_50_fixed_Lambda,cbPalette_viridis)
-New.P2_fixed_Lambda <- Plot_sampling_50_gen_GF_Length(ggdata_l.GF_50_fixed_Lambda,cbPalette_viridis)
-New.P3_fixed_Lambda <- Plot_sampling_varying_gen_t_GF(ggdata_t.GF_varying_fixed_Lambda,cbPalette_viridis)
-New.P4_fixed_Lambda <- Plot_sampling_varying_gen_GF_Length(ggdata_l.GF_varying_fixed_Lambda,cbPalette_viridis)
-```
-
-
-
-We investigated the effect of continuous admixture in comparison to other parameters on the admixture time estimates of a model only considering a single generation pulse. The continuous admixture revealed to have the smallest effect, whereas the recombination rate shows a sever underestimation of the admixture time. Building on the previous result we want to find out the conditions to retrieve the Lomax parameters i.e. the duration of gene flow. We simulated an admixture scenario under a simple demography with varying duration of continuous admixture and sampled the population at different time points since the end of the gen flow. Doing so allows us to examine how close one has to sample form the end of a continuous admixture to still accurately estimate its duration. Moreover, since the recombination map is highly influential we test the duration estimates under a constant and variable recombination using the HapMap genetic map, whereby we correct the genetic distance by: assuming a constant rate, using the AAMap or the HapMap itself. We used the LES ascertainment scheme in combination with a minimal distance of 0.05 cM. To fit the Lomax we can take advantage of the fact that the bias of the mean time estimates using the simplified one generation pulse model is pretty accurate. We can thus estimate lambda first by fitting an exponential and in a second step estimating k using a Lomax distribution with a starting parameter for lambda received form the exponential fit. Figure \ref{fig:fig4} A and C show the mean time estimates received from the Exponential fit. A shows estimates for different durations of continuous admixture with all populations sampled 50 generations after the end of gene flow. C shows estimates for a 800 generation long continuous admixture sampled after different times after the end of the gene flow. In both scenarios, for simulations under a constant recombination the mean time can be estimated confidently with only slight underestimation for long continuous gene flow of 1500 generations. Estimates for simulation under a recombination map only assuming a constant rate when calculating the LD results in severely underestimation of the mean time estimates. Using the AAMap yields results closer to the true value and less downwards biased, however only using the exact same genetic map gives unbiased results. Figure \ref{fig:fig4} B and D shows the corresponding duration estimates by the Lomax fit. Accurate estimates can be obtained throughout the different gene flow length under a constant recombination rate, when sampled recent from the end of the continuous admixture. The further away one samples form the end of the admixture event the less accurate the estimates. All simulations using a recombination map show a much higher variance in the estimates, especially for a gene flow length longer then 800 generations or sampled later then 50 generations away from the end of gene flow the estimates are not reliably. If no precise genetic map is used to inferred the genetic distance between SNPs, no accurate duration estimates can be obtained. The mean duration over all replicates for the simulation corrected by the exact same map seems relatively unbiased for a recent gene flow with a duration shorter 1000 generations. Under a realistic scenario with a varying recombination rate, the duration can only be accurately estimated with a highly precise map for recent continuous admixture events not longer then 400 generations. With regard to scenarios of Neandertal admixture, accurately estimating the duration of possible continuous admixture from present day human genomes even under a constant rate is probably is under powered. The time since the end of the gene flow when using present day human genome is to far away such that the signal of continuous gene flow, even under simple simulation scenarios using a constant recombination rate, is not strong enough. 
-
-
-
-```{r message=FALSE, echo=FALSE,warning=FALSE}
-Get_model_selection <- function(Data,GF_length,Sim_Scenario){
-  if (GF_length==1){
-    xx <- Data[Data$True_GF_length==GF_length,]
-  } else {
-    xx <- Data[Data$True_GF_length>=GF_length,]
-  }
-
-  xx <- xx[xx$Name==Sim_Scenario,]
-  
-  
-  Expo_prefered <- xx[xx$AIC_Expo<xx$AIC_Lomax,]
-  
-  Lomax_prefered <- length(xx$A.exp)-length(Expo_prefered$A.exp)
-  
-  Model_select <- cbind(length(Expo_prefered$A.exp),Lomax_prefered)
-  colnames(Model_select) <- c("Expo_prefered","Lomax_prefered")
-
-  return(Model_select)
-}
-
-Pulse_model_selction <- Get_model_selection(Plot.data_50,1,'Recent_50_constant')
-Continuous_model_selection <- Get_model_selection(Plot.data_50,2,'Recent_50_constant')
-```
-
-
-To distinguish a pulse like admixture event resulting in an exponentially distributed ALD decay from a Lomax distributed ALD decay associated with a continuous admixture, we compared the two model via goodness-of-fit to the ALD data. Therefore we used Akaike's information criterion comparing the exponential model nested in the Lomax. We expect that, since the AIC is penalizing extra parameter, that a Lomax fit to a pulse like simulation scenario should be rejected, wheres for all the other scenarios the Lomax would be preferred. However, for the simplified simulation scenarios under a constant recombination rate were we obtained the best results the Lomax displays a lower AIC in `r Pulse_model_selction[,2]` fits out of 100 replications. Model comparison for scenarios of true continuous admixture always rested in the Lomax having a lower AIC. The AIC reject the null hypothesis to often and thus seem to be a to liberal test.
-<!-- does on call a a statistical test rejecting the H0 to often liberal? -->
-
-
-
-
-
-<!-- To get a duration under realistic scenario on needs a highly precise map and genflow has to be shorter then 400 generation and recently in the past. -->
-
-<!-- Maybe call it inferring the genetic distance rather than correcting -->
-
-``` {r fig4, message=FALSE, echo=FALSE,warning=FALSE,fig4.pos="H",fig.width=9,fig.height=6,fig.cap="\\label{fig:fig4} ll"}
-
-
-New.Fig <- ggarrange(New.P1,New.P2,New.P3,New.P4,
-                   labels = c("A","B","C","D"),
-                   ncol = 2, nrow = 2,common.legend = T,legend = 'bottom')
-
-New.Fig_fixed_Lambda <- ggarrange(New.P1_fixed_Lambda,New.P2_fixed_Lambda,New.P3_fixed_Lambda,New.P4_fixed_Lambda,
-                     labels = c("A","B","C","D"),
-                     ncol = 2, nrow = 2,common.legend = T,legend = 'bottom')
-New.Fig
-
-#New.Fig_fixed_Lambda
-```
-
-
-#Discussion
-
-*bp 19/02: this should go in the discussion*
-
-Neandertals and modern human populations overlapped in some regions for a long period of time [@higham_timing_2014], potentially resulting in continuous admixture over hundreds of generations. We are especially interested in the extrema of a continuous admixture distribution, since the start and end point can inform us about the first contact between humans and Neandertals and the time of extinction of Neandertals.
-
-Conclusions:
-\begin{itemize}
-	\item The mean time of gene flow can be reliably estimated with a pulse model even if the gene flow is actually continuous.
-  \item Technical model variables (ascertainment scheme, minimal distance, demography and recombination map) outweigh the effect of continuous gene flow.
-  \item The Lomax model is under powered to inferring continuous admixture for parameters relevant for Neandertal admixture.
-  \item Estimating the the mean time and especially the duration of gene flow is only possible with a highly precise genetic map.
-  \item The signal of continuous gene flow is hard to detect if the gene flow is not long enough or to far in the past.
-  \item Reliably distinguishing the models is difficult.
-\end{itemize}
-
-#Refereces
-
-<div id="refs"></div>
-
-
-\pagebreak
-\setcounter{figure}{0}
-\renewcommand{\figurename}{Fig. S}
-\renewcommand{\tablename}{Tab. S}
-
-
-#Supplement
-
-```{r figS1, message=FALSE, echo=FALSE,warning=FALSE,fig.width=12,fig.height=6,fig.cap="\\label{fig:figS1}Comparison of the bias on the admixture time estimates in generations between all combinations the parameters: ascertainment scheme = LES/HES,  $d_{0}$ = 0.02/0.05 cM, demography = simple/complex, recombination = constant/variable and the gene flow model = pulse/continuous.  Dotted horizontal line indicates unbiased admixture estimates."}
-
-
-### Supplement Figures ? Tables
-
-Plot_Fig_2_A <- function(Data,x.axes.lables){
-  Px <-  ggplot(Data,aes(x=Var2,y=as.numeric(as.character(Var1)),colour=factor(Var3)))+
-    geom_point(aes(size = Freq),show.legend = F)+
-    geom_boxplot()+
-    geom_abline(intercept = 0,slope = 0,linetype=2,aes(colour='grey'))+
-    coord_cartesian(ylim = c(-1500,1100),expand = 0)+
-    labs(x = "Predictor combination")+
-    labs(y = "Bias on admixture estimate")+
-    theme(axis.text.x = element_text(angle = 0))+
-    scale_x_discrete(labels= x.axes.lables)+
-    scale_color_manual("Gene Flow Model",
-                       values = c(cbPalette_viridis[1],cbPalette_viridis[6]),
-                       labels = c("Pulse","Continuous"))
-  return(Px)
-  
-}
-
-#x.axes.lables=c("LES\n0.02\nSim\nCon","LES\n0.02\nSim\nVar","LES\n0.02\nInf\nCon","LES\n0.02\nInf\nVar"
-#                ,"LES\n0.05\nSim\nCon","LES\n0.05\nSim\nVar","LES\n0.05\nInf\nCon","LES\n0.05\nInf\nVar"
-#                ,"HES\n0.02\nSim\nCon","HES\n0.02\nSim\nVar","HES\n0.02\nInf\nCon","HES\n0.02\nInf\nVar"
-#                ,"HES\n0.05\nSim\nCon","HES\n0.05\nSim\nVar","HES\n0.05\nInf\nCon","HES\n0.05\nInf\nVar"
-#                ,"LES\n0.02\nSim\nCon","LES\n0.02\nSim\nVar","LES\n0.02\nInf\nCon","LES\n0.02\nInf\nVar"
-#                ,"LES\n0.05\nSim\nCon","LES\n0.05\nSim\nVar","LES\n0.05\nInf\nCon","LES\n0.05\nInf\nVar"
-#                ,"HES\n0.02\nSim\nCon","HES\n0.02\nSim\nVar","HES\n0.02\nInf\nCon","HES\n0.02\nInf\nVar"
-#                ,"HES\n0.05\nSim\nCon","HES\n0.05\nSim\nVar","HES\n0.05\nInf\nCon","HES\n0.05\nInf\nVar")
-
-x.axes.lables=c("LES\n0.02\nSim\nCon","LES\n0.02\nSim\nVar","LES\n0.02\nCom\nCon","LES\n0.02\nCom\nVar"
-                ,"LES\n0.05\nSim\nCon","LES\n0.05\nSim\nVar","LES\n0.05\nCom\nCon","LES\n0.05\nCom\nVar"
-                ,"HES\n0.02\nSim\nCon","HES\n0.02\nSim\nVar","HES\n0.02\nCom\nCon","HES\n0.02\nCom\nVar"
-                ,"HES\n0.05\nSim\nCon","HES\n0.05\nSim\nVar","HES\n0.05\nCom\nCon","HES\n0.05\nCom\nVar"
-                ,"LES\n0.02\nSim\nCon","LES\n0.02\nSim\nVar","LES\n0.02\nCom\nCon","LES\n0.02\nCom\nVar"
-                ,"LES\n0.05\nSim\nCon","LES\n0.05\nSim\nVar","LES\n0.05\nCom\nCon","LES\n0.05\nCom\nVar"
-                ,"HES\n0.02\nSim\nCon","HES\n0.02\nSim\nVar","HES\n0.02\nCom\nCon","HES\n0.02\nCom\nVar"
-                ,"HES\n0.05\nSim\nCon","HES\n0.05\nSim\nVar","HES\n0.05\nCom\nCon","HES\n0.05\nCom\nVar")
-
-Plot_Fig_2_A(xx,x.axes.lables)
-```
 
 
 ```{r tableS1, echo=FALSE,results='asis' }
-kable(Summary_Table_res.M.3,
-      caption = "\\label{tab:tableS1}Estimates for the predictor from the Gaussian linear model with 2.5/95.5 % compatibility intervals in generations, standard error, t and p-values.")
-```
 
+print_B_model_result <- data.frame(B_model_result)
+kable(print_B_model_result , col.names = c("mean" , "sd"   , "5.5%"  ,"94.5%", "n_eff", "Rhat" ),digits = 2,
+      caption = "\\label{tab:tableS1} Mean, standart deviation, 5.5/94.5 compatibility interval of the posterior distribution for every parameter effect on the standardized difference between true and estimated admixture time.")
+```
